@@ -34,8 +34,10 @@ What's new:
 What changed:
 -------------
 
-- setfacl(1) now allows to use the -b and -k option combined to allow reducing
-  an ACL to only reflect standard POSIX permissions.
+- Align setfacl(1) usage a bit closer to the usage on Linux.  Rename -d option
+  to -x, --substitute to --set.  Add --no-mask and --mask options.  Allow to
+  use the -b and -k option combined to allow reducing an ACL to only reflect
+  standard POSIX permissions.
 
 - Fix (numeric and monetary) decimal point and thousands separator in
   fa_IR and ps_AF locales to be aligned with Linux.
