@@ -41,8 +41,10 @@ New API: rpmatch.
 </para></listitem>
 
 <listitem><para>
-setfacl(1) now allows to use the -b and -k option combined to allow reducing
-an ACL to only reflect standard POSIX permissions.
+Align setfacl(1) usage a bit closer to the usage on Linux.  Rename -d option
+to -x, --substitute to --set.  Add --no-mask and --mask options.  Allow to
+use the -b and -k option combined to allow reducing an ACL to only reflect
+standard POSIX permissions.
 </para></listitem>
 
 <listitem><para>
