@@ -1,3 +1,8 @@
+2015-12-21  Corinna Vinschen  <corinna@vinschen.de>
+
+	* utils.xml (setfacl): Rename --substitute to --set.
+	* new-features.xml (ov-new2.4): Rephrase setfacl changes.
+
 2015-12-07  Johannes Schindelin  <johannes.schindelin@gmx.de>
 
 	* pathnames.xml: Document the new usertemp file system type.
